[project]
name = "dbpyman"
version = "0.1.5"
authors = [
  { name="JanikCodes", email="janiksielaff@gmx.de" },
]
description = "A package used to modify & view your MySQL database data dynamically"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JanikCodes/py_discord_db_management"
"Bug Tracker" = "https://github.com/JanikCodes/py_discord_db_management/issues"